--- a/MyChuFang/BaseProject/Base.lproj/Main.storyboard
+++ b/MyChuFang/BaseProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="xVf-Rh-Rpj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gRF-P3-NWc">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -15,7 +15,7 @@
                         <animations/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="5vg-ax-hPa">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="340"/>
+                            <rect key="frame" x="0.0" y="64" width="320" height="340"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="VJ7-HG-QjE">
@@ -81,7 +81,7 @@
                         </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="70" id="hfb-w7-14H" customClass="XiaChuFangCell">
-                                <rect key="frame" x="0.0" y="390" width="320" height="70"/>
+                                <rect key="frame" x="0.0" y="454" width="320" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hfb-w7-14H" id="SrH-vc-jTy">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
@@ -123,6 +123,11 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <animations/>
+                                <connections>
+                                    <outlet property="detailLb" destination="Kqb-Uj-7Xh" id="XWB-IK-TOD"/>
+                                    <outlet property="icionIV" destination="INP-WN-ghf" id="Zfu-UP-Ihl"/>
+                                    <outlet property="titleLb" destination="6do-4p-opT" id="bKx-hh-ipB"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -130,6 +135,7 @@
                             <outlet property="delegate" destination="xVf-Rh-Rpj" id="UJL-6A-wHR"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="yXt-i2-TIx"/>
                     <connections>
                         <outlet property="faXianBtn" destination="dJp-Df-zOd" id="dsC-bc-TiM"/>
                         <outlet property="fristBtn" destination="GVx-2k-EK5" id="U4f-Wp-TBX"/>
@@ -149,6 +155,25 @@
                         <outlet property="searchResultsDelegate" destination="xVf-Rh-Rpj" id="Agd-mL-ue4"/>
                     </connections>
                 </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="862" y="-330"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="TUz-WZ-ads">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gRF-P3-NWc" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2TS-5I-TOf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xVf-Rh-Rpj" kind="relationship" relationship="rootViewController" id="fZw-xl-ug8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vr3-4F-kpe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="464" y="-330"/>
         </scene>
